# bingomatic

./: .gitignore  CONTRIBUTING.md  README.md  config_template.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/specs/01-spec-config-validation/: 01-questions-round-1.md  01-tasks-config-validation.md  01-validation-report.md  spec.md
docs/specs/01-spec-config-validation/01-proofs/: 01-task-01-proofs.md  01-task-02-proofs.md  01-task-03-proofs.md  01-task-04-proofs.md  01-task-05-proofs.md
docs/specs/02-spec-document-template/: 02-questions-round-1.md  02-tasks-document-template.md  02-validation-report.md  spec.md
docs/specs/02-spec-document-template/02-proofs/: 02-task-01-proofs.md  02-task-02-proofs.md  02-task-03-proofs.md  02-task-04-proofs.md  02-task-05-proofs.md
docs/specs/03-spec-card-content-population/: 03-questions-round-1.md  03-tasks-card-content-population.md  03-validation-report.md  spec.md
docs/specs/03-spec-card-content-population/03-proofs/: 03-task-all-proofs.md
docs/specs/04-spec-github-actions-ci/: 04-tasks-github-actions-ci.md  04-validation-report.md  questions-round-1.md  spec.md
docs/specs/04-spec-github-actions-ci/04-proofs/: 04-task-01-proofs.md  04-task-02-proofs.md  04-task-03-proofs.md
docs/specs/05-spec-pypi-publishing/: 05-tasks-pypi-publishing.md  questions-round-1.md  spec.md
docs/specs/05-spec-pypi-publishing/05-proofs/: 05-task-01-proofs.md  05-task-02-proofs.md  05-task-03-proofs.md  05-task-04-proofs.md
docs/specs/06-spec-pdf-rendering-fixes/: 06-tasks-pdf-rendering-fixes.md  questions-round-1.md  spec.md
docs/specs/06-spec-pdf-rendering-fixes/06-proofs/: 06-task-01-04-proofs.md  validation-report.md
src/bingomatic/: __init__.py  cli.py  config.py  pdf.py
tests/: __init__.py  test_cli.py  test_config.py  test_pdf.py
tests/fixtures/: valid_config.yaml
