[project]
name = "bingomatic"
dynamic = ["version"]
description = "A bingo card generator for conferences like DevOpsDays"
readme = "README.md"
authors = [
  {name = "Richard Boyd II", email = "registration@richardboydii.com"},
]
maintainers = [
  {name = "Richard Boyd II", email = "registration@richardboydii.com"}
]
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
keywords = ["bingo", "conference", "devopsdays", "pdf", "cli"]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "reportlab>=4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/richardboydii/bingomatic"
Repository = "https://github.com/richardboydii/bingomatic"
Documentation = "https://github.com/richardboydii/bingomatic#readme"
[project.scripts]
bingomatic = "bingomatic.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/bingomatic/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/bingomatic"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8",
]
